Add responsiveness using media queries

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav class="flex justify-between items-center">
-        <h1>Shohruz Ernazarov</h1>
+        <h1>Shohruz</h1>
         <ul class="flex justify-center items-center">
           <li class=""><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
